--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,18 +1,24 @@
 ---
+import { getCollection, type CollectionEntry } from "astro:content";
+import PostLink from "../../components/PostLink.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
-  const allPosts = await Astro.glob("../posts/*.md");
+  const allPosts = await getCollection("posts");
 
-  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
     return {
       params: { tag },
       props: { posts: filteredPosts },
     };
   });
+}
+
+interface Props {
+  posts: CollectionEntry<'posts'>[];
 }
 
 const { tag } = Astro.params;
@@ -25,7 +31,7 @@ const { posts } = Astro.props;
     {
       posts.map((post) => (
         <li>
-          <a href={post.url}>{post.frontmatter.title}</a>
+          <PostLink title={post.data.title} slug={post.slug}></PostLink>
         </li>
       ))
     }
