--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,7 +1,21 @@
 ---
+import { Icon } from "astro-icon";
 ---
-<div class="hamburger">
-  <span class="line"></span>
-  <span class="line"></span>
-  <span class="line"></span>
-</div>
+
+<Icon pack="feather" name="menu" class="hamburger" />
+<style>
+  [astro-icon] {
+    height: 1.5em;
+  }
+
+  .hamburger {
+    padding-right: 20px;
+    cursor: pointer;
+  }
+
+  @media screen and (min-width: 636px) {
+    .hamburger {
+      display: none;
+    }
+  }
+</style>
