--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,23 @@
 ---
-import Navigation from './Navigation.astro';
-import Hamburger from './Hamburger.astro';
+import Hamburger from "./Hamburger.astro";
+import Navigation from "./Navigation.astro";
 ---
+
 <header>
-    <nav>
-        <Hamburger/>
-        <Navigation/>
-    </nav>
+  <nav>
+    <Hamburger />
+    <Navigation />
+  </nav>
 </header>
+<div class="padding">
+  <style>
+    header {
+      position: fixed;
+    }
+
+    .padding,
+    header {
+      height: 4rem;
+    }
+  </style>
+</div>
