--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,10 @@
 ---
-import Header from '../components/Header.astro';
-import '../styles/global.css';
+import Header from "../components/Header.astro";
+import "../styles/global.css";
 const { pageTitle } = Astro.props;
+const css_debug = true;
 ---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -18,5 +20,6 @@ const { pageTitle } = Astro.props;
     <script>
       import "../scripts/menu.js";
     </script>
+    {css_debug && <style>* {background-color: rgba(50, 50, 50, 0.1);}</style>}
   </body>
 </html>
