--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,4 +8,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
 
   <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+
+  <h2>Tech Stack</h2>
+  <ul>
+    <li>Astro as the web framework</li>
+    <li>Feather Icons</li>
+  </ul>
 </BaseLayout>
