--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Header from "../components/Header.astro";
 import "../styles/global.css";
 const { pageTitle } = Astro.props;
-const css_debug = true;
+const css_debug = false;
 ---
 
 <html lang="en">
