--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,6 +12,9 @@ import { Icon } from "astro-icon";
   <a href="https://www.linkedin.com/in/hugo-belot-deloro/">
     <Icon pack="feather" name="linkedin" />
   </a>
+  <a href="/rss.xml">
+    <Icon pack="feather" name="rss" />
+  </a>
 </div>
 
 <style>
