--- a/src/components/PostLink.astro
+++ b/src/components/PostLink.astro
@@ -1,5 +1,24 @@
 ---
-const { title, slug } = Astro.props;
+import { getEntry } from "astro:content";
+const { slug } = Astro.props;
+const post = await getEntry("posts", slug);
+if (post === undefined) {
+  throw new Error(`Post not found: ${slug}`);
+}
 ---
 
-<a href={`/posts/${slug}`}>{title}</a>
+<a href={`/posts/${slug}`}>
+  {post.data.title}
+</a>
+<p>
+    {post.data.description}
+</p>
+<p>
+  {
+    post.data.date.toLocaleDateString(undefined, {
+      day: "numeric",
+      month: "long",
+      year: "numeric",
+    })
+  }
+</p>
