--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -26,12 +26,12 @@ const { posts } = Astro.props;
 ---
 
 <BaseLayout pageTitle={tag}>
-  <p>Posts tagged with {tag}</p>
+  <h1>{tag}</h1>
   <ul>
     {
       posts.map((post) => (
         <li>
-          <PostLink title={post.data.title} slug={post.slug}></PostLink>
+          <PostLink slug={post.slug}></PostLink>
         </li>
       ))
     }
