--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -8,6 +8,7 @@ const pageTitle = "Tag Index";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <h1>Tags</h1>
   <div class="tags">
     {
       tags.map((tag) => (
