--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,9 +1,9 @@
 ---
-import { getCollection } from "astro:content";
 import MarkdownPostLayout from "../../layouts/MarkdownPostLayout.astro";
+import { getAllPostsSorted } from "../../lib/posts";
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection("posts");
+  const blogEntries = await getAllPostsSorted();
   return blogEntries.map((entry) => ({
     params: { slug: entry.slug },
     props: { entry },
