--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,15 +1,20 @@
 ---
-import { getCollection, type CollectionEntry } from "astro:content";
+import { type CollectionEntry } from "astro:content";
 import PostLink from "../../components/PostLink.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import { getAllPostsSorted } from "../../lib/posts";
 
 export async function getStaticPaths() {
-  const allPosts = await getCollection("posts");
+  const allPosts = await getAllPostsSorted();
 
-  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
+  const uniqueTags = [
+    ...new Set(allPosts.map((post) => post.data.tags).flat()),
+  ];
 
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) =>
+      post.data.tags.includes(tag)
+    );
     return {
       params: { tag },
       props: { posts: filteredPosts },
@@ -18,7 +23,7 @@ export async function getStaticPaths() {
 }
 
 interface Props {
-  posts: CollectionEntry<'posts'>[];
+  posts: CollectionEntry<"posts">[];
 }
 
 const { tag } = Astro.params;
@@ -31,7 +36,7 @@ const { posts } = Astro.props;
     {
       posts.map((post) => (
         <li>
-          <PostLink slug={post.slug}></PostLink>
+          <PostLink slug={post.slug} />
         </li>
       ))
     }
