--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,14 +1,14 @@
 ---
-import { getCollection } from "astro:content";
 import TagLinks from "../../components/TagLinks.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import { getAllPostsSorted } from "../../lib/posts";
 
-const allPosts = await getCollection("posts");
+const allPosts = await getAllPostsSorted();
 const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 const pageTitle = "Tag Index";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h1>Tags</h1>
-  <TagLinks tags={tags}/>
+  <TagLinks tags={tags} />
 </BaseLayout>
