--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,6 +1,11 @@
 ---
+import type { CollectionEntry } from "astro:content";
 import MarkdownPostLayout from "../../layouts/MarkdownPostLayout.astro";
 import { getAllPostsSorted } from "../../lib/posts";
+
+interface Props {
+  entry: CollectionEntry<"posts">;
+}
 
 export async function getStaticPaths() {
   const blogEntries = await getAllPostsSorted();
@@ -11,9 +16,13 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { Content, remarkPluginFrontmatter } = await entry.render();
+
 ---
 
-<MarkdownPostLayout frontmatter={entry.data}>
+<MarkdownPostLayout
+  frontmatter={entry.data}
+  minutesRead={remarkPluginFrontmatter.minutesRead}
+>
   <Content />
 </MarkdownPostLayout>
