--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -16,13 +16,13 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const { Content, remarkPluginFrontmatter } = await entry.render();
-
+const { Content, remarkPluginFrontmatter, headings } = await entry.render();
 ---
 
 <MarkdownPostLayout
   frontmatter={entry.data}
   minutesRead={remarkPluginFrontmatter.minutesRead}
+  headings={headings}
 >
   <Content />
 </MarkdownPostLayout>
