--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -5,14 +5,11 @@ import { Icon } from "astro-icon";
   <Icon pack="feather" name="menu" class="hamburger" />
 </span>
 <style>
-  [astro-icon] {
-  }
-
   span {
     display: inline-block;
-    background: white;
+    background: var(--bg-color-2);
     border-radius: 2em;
-    box-shadow: 2px 3px 3px gray;
+    box-shadow: 2px 3px 3px var(--shadow-color);
     height: 2em;
     width: 2em;
     text-align: center;
