--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -36,8 +36,8 @@ import { Icon } from "astro-icon";
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: #00539f;
-    background-color: #b7bec5;
+    color: var(--link-text-color);
+    background-color: var(--bg-color-1);
   }
 
   .nav-links a:first-child() {
