--- a/src/components/PostLink.astro
+++ b/src/components/PostLink.astro
@@ -1,26 +1,45 @@
 ---
 import { getEntry } from "astro:content";
 import TagLinks from "./TagLinks.astro";
+
 const { slug } = Astro.props;
 const post = await getEntry("posts", slug);
+
 if (post === undefined) {
   throw new Error(`Post not found: ${slug}`);
 }
 ---
 
-<a href={`/posts/${slug}`}>
-  {post.data.title}
-</a>
-<p>
-  {post.data.description}
-</p>
-<span>
-  {
-    post.data.date.toLocaleDateString(undefined, {
-      day: "numeric",
-      month: "long",
-      year: "numeric",
-    })
+<div>
+  <a href={`/posts/${slug}`}>
+    {post.data.title}
+  </a>
+  <p>
+    {post.data.description}
+  </p>
+  <span>
+    {
+      post.data.date.toLocaleDateString(undefined, {
+        day: "numeric",
+        month: "long",
+        year: "numeric",
+      })
+    }
+  </span>
+  <TagLinks tags={post.data.tags} />
+</div>
+
+<style>
+  a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--link-text-color);
   }
-</span>
-<TagLinks tags={post.data.tags} />
+
+  div {
+    background-color: var(--bg-color-1);
+    border-radius: 1em;
+    box-shadow: 2px 3px 3px var(--shadow-color);
+    padding: 1em;
+  }
+</style>
