--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,7 @@ const css_debug = false;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    {css_debug && <link rel="stylesheet" href="/styles/debug.css" />}
   </head>
   <body>
     <Header />
@@ -19,6 +20,5 @@ const css_debug = false;
     <script>
       import "../scripts/menu.js";
     </script>
-    {css_debug && <style>* {background-color: rgba(50, 50, 50, 0.1);}</style>}
   </body>
 </html>
