--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,9 @@ html {
 
 body {
   margin: 0 auto;
+  font-size: 1.5rem;
   width: 100%;
-  max-width: 80ch;
+  max-width: 60ch;
   padding: 1rem;
   line-height: 1.5;
 }
