style: make toc responsive

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const { toc } = Astro.props;
 const fullToc: Headings = {
-  text: "Summary:",
+  text: "Table of contents:",
   children: toc,
   slug: "",
 };
