--- a/src/components/TagLink.astro
+++ b/src/components/TagLink.astro
@@ -12,7 +12,7 @@ const { tag } = Astro.props;
 
 <style>
   a {
-    color: var(--link-text-color);
+    color: var(--text-color-link);
   }
 
   .tag {
