--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -21,6 +21,7 @@ import { Icon } from "astro-icon";
     height: 1em;
     width: 1em;
     margin: 0.5em auto;
+    color: var(--text-color-2);
   }
 
   @media screen and (min-width: 636px) {
