--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -36,7 +36,7 @@ import { Icon } from "astro-icon";
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: var(--link-text-color);
+    color: var(--text-color-link);
     background-color: var(--bg-color-1);
   }
 
