--- a/src/components/PostLink.astro
+++ b/src/components/PostLink.astro
@@ -33,7 +33,7 @@ if (post === undefined) {
   a {
     text-decoration: none;
     font-weight: bold;
-    color: var(--link-text-color);
+    color: var(--text-color-link);
   }
 
   div {
