--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,10 +13,8 @@ import Navigation from "./Navigation.astro";
 <style>
   header {
     position: sticky;
-    top: 1em;
-  }
-
-  nav {
-    margin-left: 5em;
+    top: 1rem;
+    margin: 0 auto;
+    max-width: 1000px;
   }
 </style>
