--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -19,7 +19,7 @@ import { Icon } from "astro-icon";
 
 <style>
   [astro-icon] {
-    height: 1em;
+    height: 1rem;
     vertical-align: text-top;
   }
 
