--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,10 @@ const latestPosts = posts.slice(0, 5);
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h1>Welcome to my blog</h1>
-   It is still a work in progress
+  <h1>Iridescent's blog</h1>
+   Hi, I'm Iridescent, IT engineer and software developer. I am driven by
+  curiosity and the desire to understand how things work. Welcome to my blog!
 
   <h2>Latest posts:</h2>
-  <PostLinks posts={latestPosts}/>
+  <PostLinks posts={latestPosts} />
 </BaseLayout>
