--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,15 @@
 ---
 import Header from "../components/Header.astro";
+import "../styles/reset.css";
 import "../styles/global.css";
-const { pageTitle } = Astro.props;
+
+interface Props {
+  pageTitle: string;
+  disableMainElement?: boolean;
+}
+
+const { pageTitle, disableMainElement } = Astro.props;
+
 const css_debug = false;
 ---
 
@@ -15,12 +23,18 @@ const css_debug = false;
     {css_debug && <link rel="stylesheet" href="/styles/debug.css" />}
   </head>
   <body>
-    <div class="central">
-      <Header />
-      <slot />
-      <script>
-        import "../scripts/menu.js";
-      </script>
-    </div>
+    <Header />
+    {
+      disableMainElement ? (
+        <slot />
+      ) : (
+        <main id="main">
+          <slot />
+        </main>
+      )
+    }
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
