style: add links style

--- a/src/components/TagLink.astro
+++ b/src/components/TagLink.astro
@@ -11,16 +11,13 @@ const { tag } = Astro.props;
 </p>
 
 <style>
-  a {
-    color: var(--text-color-link);
-  }
-
   .tag {
     margin: 0.25em;
-    background-color: var(--bg-color-2);
+    background-color: var(--bg-color-1);
     box-shadow: 2px 3px 3px var(--shadow-color);
     border-radius: 0.5em;
     padding: 0.5em 1em;
     font-size: 1.15em;
+    font-weight: bold;
   }
 </style>
