--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -28,7 +28,7 @@ interface Props {
 
 const { tag } = Astro.params;
 if (tag === undefined) {
-  throw "Undefined tag"
+  throw "Undefined tag";
 }
 const { posts } = Astro.props;
 ---
