deps: update astro

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,9 +1,9 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 
 <span>
-  <Icon pack="feather" name="menu" class="hamburger" />
+  <Icon name="feather:menu" class="hamburger" />
 </span>
 <style>
   span {
