--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,8 @@ const latestPosts = posts.slice(0, 5);
 
 <BaseLayout pageTitle={pageTitle}>
   <h1>Iridescent's blog</h1>
-   Hi, I'm Iridescent, IT engineer and software developer. I am driven by
-  curiosity and the desire to understand how things work. Welcome to my blog!
+  Hi, I'm Iridescent, IT engineer and software developer. I am driven by curiosity
+  and the desire to understand how things work. Welcome to my blog!
 
   <h2>Latest posts:</h2>
   <PostLinks posts={latestPosts} />
