--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,6 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div class="nav-links">
+  <span id="title">Iridescent dreams</span>
   <a href="/">Home</a>
   <a href="/blog/">Blog</a>
   <a href="/tags/">Tags</a>
@@ -19,8 +20,17 @@ import { Icon } from "astro-icon/components";
 
 <style>
   [data-icon] {
-    height: 1rem;
+    height: 1.2rem;
+    display: inline;
     vertical-align: text-top;
+  }
+
+  #title {
+    width: 100%;
+  }
+
+  .nav-links > a:has(> svg) {
+    flex-shrink: 0;
   }
 
   .nav-links {
@@ -28,24 +38,22 @@ import { Icon } from "astro-icon/components";
     flex-direction: column;
   }
 
-  .nav-links a {
+  .nav-links > * {
     display: block;
-    text-align: center;
     padding: 10px 0;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: var(--text-color-link);
     background-color: var(--bg-color-1);
   }
 
-  .nav-links a:first-child() {
+  .nav-links > *:first-child() {
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
   }
 
-  .nav-links a:last-child() {
+  .nav-links > *:last-child() {
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
   }
@@ -65,17 +73,17 @@ import { Icon } from "astro-icon/components";
       flex-direction: row;
     }
 
-    .nav-links a {
+    .nav-links > * {
       padding: 15px 20px;
     }
 
-    .nav-links a:first-child() {
+    .nav-links > *:first-child() {
       border-top-left-radius: 999em;
       border-bottom-left-radius: 999em;
       border-top-right-radius: unset;
     }
 
-    .nav-links a:last-child() {
+    .nav-links > *:last-child() {
       border-top-right-radius: 999em;
       border-bottom-right-radius: 999em;
       border-bottom-left-radius: unset;
