style: add colour palettes

--- a/src/components/PostLink.astro
+++ b/src/components/PostLink.astro
@@ -42,7 +42,8 @@ if (post === undefined) {
   }
 
   div {
-    background-color: var(--bg-color-1);
+    color: var(--text-color-2);
+    background-color: var(--bg-color-2);
     border-radius: 1em;
     box-shadow: 2px 3px 3px var(--shadow-color);
     padding: 1em;
