--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -27,6 +27,7 @@ import { Icon } from "astro-icon/components";
 
   #title {
     width: 100%;
+    color: var(--text-color-2)
   }
 
   .nav-links > a:has(> svg) {
@@ -45,7 +46,7 @@ import { Icon } from "astro-icon/components";
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
-    background-color: var(--bg-color-1);
+    background-color: var(--bg-color-2);
   }
 
   .nav-links > *:first-child() {
