style: add colour palette tag

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -61,7 +61,8 @@ import { Icon } from "astro-icon/components";
 
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #dddddd;
+    color: var(--bg-color-2);
+    background-color: var(--text-color-link);
   }
 
   .expanded {
