--- a/src/styles/palettes/void.css
+++ b/src/styles/palettes/void.css
@@ -1,9 +1,19 @@
-:root {
+html[data-style="void"] {
   --bg-color-1: #262334;
   --text-color-1: #D8F5F9;
   --bg-color-2: #354D79;
   --text-color-2: #69BBEA;
   --text-color-link: #3C72C5;
+  --shadow-color: gray;
+  --text-color-faded: gray;
+}
+
+html[data-style="void2"] {
+  --bg-color-1: #2F2C40;
+  --text-color-1: #63BBF2;
+  --bg-color-2: #3B74BF;
+  --text-color-2: #D8F2F0;
+  --text-color-link: #94F2F2;
   --shadow-color: gray;
   --text-color-faded: gray;
 }
