--- a/src/styles/palettes/aurelion.css
+++ b/src/styles/palettes/aurelion.css
@@ -1,9 +1,9 @@
 html[data-style="aurelion"] {
-  --bg-color-1: #2B1B40;
-  --text-color-1: #3754B8;
-  --bg-color-2: #262C7A;
-  --text-color-2: #43D2F1;
-  --text-color-link: #C58173;
+  --bg-color-1: #2b1b40;
+  --text-color-1: #3754b8;
+  --bg-color-2: #262c7a;
+  --text-color-2: #43d2f1;
+  --text-color-link: #c58173;
   --shadow-color: gray;
   --text-color-faded: gray;
 }
