--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,16 +5,13 @@ import Navigation from "./Navigation.astro";
 
 <header>
   <Hamburger />
-  <nav>
-    <Navigation />
-  </nav>
+  <Navigation />
 </header>
 
 <style>
   header {
     position: sticky;
-    top: 1rem;
-    margin: 0 auto;
-    max-width: 1000px;
+    top: 0;
+    background-color: var(--bg-color-1);
   }
 </style>
