--- a/src/styles/palettes/obsidian.css
+++ b/src/styles/palettes/obsidian.css
@@ -1,9 +1,9 @@
 html[data-style="obsidian"] {
-  --bg-color-1: #47223E;
-  --text-color-1: #993DAF;
+  --bg-color-1: #47223e;
+  --text-color-1: #993daf;
   --bg-color-2: #854066;
-  --text-color-2: #AD556C;
-  --text-color-link: #9C955B;
+  --text-color-2: #ad556c;
+  --text-color-link: #9c955b;
   --shadow-color: gray;
   --text-color-faded: gray;
 }
