--- a/src/styles/palettes/wanderer.css
+++ b/src/styles/palettes/wanderer.css
@@ -1,9 +1,9 @@
 html[data-style="wanderer"] {
-  --bg-color-1: #C0D1E5;
-  --text-color-1: #1B1A29;
-  --bg-color-2: #3A537A;
-  --text-color-2: #8AB9D0;
-  --text-color-link: #638DD7;
+  --bg-color-1: #c0d1e5;
+  --text-color-1: #1b1a29;
+  --bg-color-2: #3a537a;
+  --text-color-2: #8ab9d0;
+  --text-color-link: #638dd7;
   --shadow-color: gray;
   --text-color-faded: gray;
 }
