style: fix table of contents padding

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -21,7 +21,7 @@ import { Icon } from "astro-icon/components";
     height: 1em;
     width: 1em;
     margin: 0.5em auto;
-    color: var(--text-color-2);
+    color: var(--text-color-link);
   }
 
   @media screen and (min-width: 636px) {
