--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,8 +3,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <nav class="nav-links">
-  <span id="title">Iridescent dreams</span>
-  <a href="/">Home</a>
+  <a href="/">Iridescent dreams</a>
   <a href="/blog/">Blog</a>
   <a href="/tags/">Tags</a>
   <a href="https://github.com/HugoBelotDeloro">
@@ -23,10 +22,6 @@ import { Icon } from "astro-icon/components";
     height: 1.2rem;
     display: inline;
     vertical-align: text-top;
-  }
-
-  #title {
-    color: var(--text-color-1);
   }
 
   nav > a:has(> svg) {
