--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,5 +13,6 @@ import Navigation from "./Navigation.astro";
     position: sticky;
     top: 0;
     background-color: var(--bg-color-1);
+    z-index: 1;
   }
 </style>
